--- a/recommendationAi.ipynb
+++ b/recommendationAi.ipynb
@@ -220,7 +220,7 @@
     "def display_recommendations():\n",
     "    # Load and preprocess dataset\n",
     "    print(\"Loading dataset...\")\n",
-    "    data = pd.read_csv('./data/mauritiusDataset.csv')\n",
+    "    data = pd.read_csv('mauritiusDataset.csv')\n",
     "    data = preprocess_data(data)\n",
     "\n",
     "    # TF-IDF Matrix\n",
