--- a/recommendationAi.ipynb
+++ b/recommendationAi.ipynb
@@ -221,7 +221,7 @@
     "def load_resources():\n",
     "    global data, tfidf_matrix, ann_model\n",
     "    print(\"Loading dataset and model...\")\n",
-    "    data = pd.read_csv('./data/mauritiusDataset.csv')\n",
+    "    data = pd.read_csv('mauritiusDataset.csv')\n",
     "    data = preprocess_data(data)\n",
     "    tfidf_matrix = create_tfidf_matrix(data)\n",
     "\n",
