--- a/recommendationAi.ipynb
+++ b/recommendationAi.ipynb
@@ -129,146 +129,114 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
-    "from tensorflow.keras.models import Sequential, load_model\n",
-    "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, Input\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "from tensorflow.keras.regularizers import l2\n",
-    "from tensorflow.keras.layers import Input\n",
-    "from flask import Flask, request, jsonify\n",
     "\n",
-    "# Initialize Flask app\n",
-    "app = Flask(__name__)\n",
-    "\n",
-    "# Global variables\n",
-    "data = None\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "tfidf_matrix = None\n",
-    "ann_model = None\n",
-    "\n",
-    "# Preprocess the Dataset\n",
+    "# Data Preprocessing\n",
     "def preprocess_data(data):\n",
     "    features = [\n",
-    "        'category', 'tags', 'location', 'opening_hours', \n",
+    "        'category', 'tags', 'location', 'opening_hours',\n",
     "        'family_friendly', 'cuisine_type', 'attraction_type', 'star_rating',\n",
     "        'price_range', 'best_time_to_visit', 'peak_hours'\n",
     "    ]\n",
+    "    # Combine relevant features into a single string for TF-IDF\n",
     "    data['combined_features'] = data[features].fillna('').apply(\n",
     "        lambda x: ' '.join(x.map(str).str.lower().map(lambda s: re.sub(r'\\W+', ' ', s))),\n",
     "        axis=1\n",
     "    )\n",
     "    return data\n",
     "\n",
-    "# Create TF-IDF Matrix\n",
+    "# TF-IDF Matrix Creation\n",
     "def create_tfidf_matrix(data):\n",
-    "    global vectorizer\n",
+    "    vectorizer = TfidfVectorizer()\n",
     "    tfidf_matrix = vectorizer.fit_transform(data['combined_features'])\n",
-    "    return tfidf_matrix\n",
+    "    return tfidf_matrix, vectorizer\n",
     "\n",
-    "# Prepare ANN Data\n",
+    "# ANN Data Preparation\n",
     "def prepare_ann_data(data, tfidf_matrix):\n",
+    "    # Create a dummy target column if it doesn't exist\n",
     "    if 'target_column' not in data.columns:\n",
     "        data['target_column'] = np.random.randint(0, 2, size=len(data))\n",
     "    y = data['target_column']\n",
     "    X = tfidf_matrix.todense()\n",
     "    return train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Build and Train ANN\n",
-    "def train_ann(X_train, y_train):\n",
+    "# ANN Model Building\n",
+    "def build_ann(input_dim):\n",
     "    model = Sequential([\n",
-    "        Input(shape=(X_train.shape[1],)),  # Explicit Input layer\n",
+    "        Input(shape=(input_dim,)),  # Explicit Input layer\n",
     "        Dense(128, activation='relu', kernel_regularizer=l2(0.01)),\n",
     "        Dropout(0.2),\n",
     "        Dense(64, activation='relu', kernel_regularizer=l2(0.01)),\n",
     "        Dropout(0.2),\n",
-    "        Dense(1, activation='sigmoid')\n",
+    "        Dense(1, activation='sigmoid')  # Output layer for binary classification\n",
     "    ])\n",
     "    model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "    \n",
-    "    # Callbacks\n",
+    "    return model\n",
+    "\n",
+    "# Train the ANN Model\n",
+    "def train_ann(X_train, y_train):\n",
+    "    model = build_ann(X_train.shape[1])\n",
+    "\n",
+    "    # Callbacks for early stopping and learning rate reduction\n",
     "    early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
     "    reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, min_lr=1e-6)\n",
-    "    \n",
+    "\n",
     "    # Train the model\n",
     "    model.fit(\n",
-    "        X_train, y_train, \n",
+    "        X_train, y_train,\n",
     "        epochs=50, batch_size=32, validation_split=0.2,\n",
     "        callbacks=[early_stopping, reduce_lr]\n",
     "    )\n",
-    "    \n",
-    "    # Save the model\n",
-    "    model.save('ann_model.keras')\n",
     "    return model\n",
     "\n",
-    "# Recommendation System\n",
-    "def recommend_with_ann(input_text, data, tfidf_matrix, ann_model, top_n=10, category=None):\n",
-    "    input_vec = vectorizer.transform([input_text]).todense()\n",
-    "    predictions = ann_model.predict(tfidf_matrix)\n",
-    "    data['score'] = predictions.flatten()\n",
-    "    recommendations = data.sort_values(by='score', ascending=False).head(top_n)\n",
+    "# Evaluate the ANN Model\n",
+    "def evaluate_model(model, X_test, y_test):\n",
+    "    y_pred = (model.predict(X_test) > 0.5).astype(int)\n",
+    "    print(\"Model Evaluation:\")\n",
+    "    print(classification_report(y_test, y_pred, zero_division=0))\n",
     "\n",
-    "    if category:\n",
-    "        recommendations = recommendations[recommendations['category'].str.contains(category, case=False, na=False)]\n",
-    "    \n",
-    "    return recommendations\n",
-    "\n",
-    "# Process User Input\n",
-    "def process_user_input(user_input):\n",
-    "    return ' '.join([item.strip().lower() for item in user_input.split(',')])\n",
-    "\n",
-    "# Flask Endpoint to Initialize Resources\n",
-    "@app.before_first_request\n",
-    "def load_resources():\n",
-    "    global data, tfidf_matrix, ann_model\n",
-    "    print(\"Loading dataset and model...\")\n",
-    "    data = pd.read_csv('mauritiusDataset.csv')\n",
+    "# Main function to train and save the model\n",
+    "def main():\n",
+    "    # Load dataset\n",
+    "    print(\"Loading dataset...\")\n",
+    "    data = pd.read_csv('./data/mauritiusDataset.csv')  # Update path if needed\n",
     "    data = preprocess_data(data)\n",
-    "    tfidf_matrix = create_tfidf_matrix(data)\n",
     "\n",
-    "    # Load model\n",
-    "    if os.path.exists('ann_model.keras'):\n",
-    "        ann_model = load_model('ann_model.keras')\n",
-    "        print(\"Model loaded successfully.\")\n",
-    "    else:\n",
-    "        print(\"No model found! Training a new one...\")\n",
-    "        X_train, X_test, y_train, y_test = prepare_ann_data(data, tfidf_matrix)\n",
-    "        ann_model = train_ann(X_train, y_train)\n",
+    "    # Create TF-IDF matrix\n",
+    "    print(\"Creating TF-IDF matrix...\")\n",
+    "    tfidf_matrix, vectorizer = create_tfidf_matrix(data)\n",
     "\n",
-    "# Flask Endpoint to Get Recommendations\n",
-    "@app.route('/recommend', methods=['POST'])\n",
-    "def recommend():\n",
-    "    try:\n",
-    "        req_data = request.get_json()\n",
+    "    # Prepare data for training\n",
+    "    print(\"Preparing data for ANN training...\")\n",
+    "    X_train, X_test, y_train, y_test = prepare_ann_data(data, tfidf_matrix)\n",
     "\n",
-    "        # Parse request data\n",
-    "        amenity = req_data.get('amenity', '')\n",
-    "        attraction = req_data.get('attraction', '')\n",
-    "        category_filter = req_data.get('category', None)\n",
-    "        top_n = req_data.get('top_n', 10)\n",
+    "    # Train ANN\n",
+    "    print(\"Training ANN model...\")\n",
+    "    model = train_ann(X_train, y_train)\n",
     "\n",
-    "        # Process inputs\n",
-    "        amenity_text = process_user_input(amenity)\n",
-    "        attraction_text = process_user_input(attraction)\n",
-    "        input_text = f\"{amenity_text} {attraction_text}\"\n",
+    "    # Evaluate ANN\n",
+    "    print(\"Evaluating model...\")\n",
+    "    evaluate_model(model, X_test, y_test)\n",
     "\n",
-    "        # Generate recommendations\n",
-    "        recommendations = recommend_with_ann(input_text, data, tfidf_matrix, ann_model, top_n, category_filter)\n",
+    "    # Save the model\n",
+    "    print(\"Saving ANN model...\")\n",
+    "    model.save('ann_model.keras')\n",
+    "    print(\"Model saved as 'ann_model.keras'\")\n",
     "\n",
-    "        # Prepare the response with required fields\n",
-    "        display_columns = ['name', 'address', 'url', 'rating', 'imageUrls', 'popularity_score', 'family_friendly', 'latitude', 'longitude']\n",
-    "        recommendations = recommendations[display_columns]\n",
-    "        return jsonify(recommendations.to_dict(orient='records'))\n",
+    "    # Save the TF-IDF vectorizer for later use\n",
+    "    print(\"Saving TF-IDF vectorizer...\")\n",
+    "    with open('vectorizer.pkl', 'wb') as f:\n",
+    "        import pickle\n",
+    "        pickle.dump(vectorizer, f)\n",
+    "    print(\"TF-IDF vectorizer saved as 'vectorizer.pkl'\")\n",
     "\n",
-    "    except Exception as e:\n",
-    "        return jsonify({'error': str(e)}), 500\n",
-    "\n",
-    "# Flask Default Route\n",
-    "@app.route('/')\n",
-    "def home():\n",
-    "    return \"Welcome to the Recommendation System API!\"\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(host='0.0.0.0', port=5000)\n"
+    "# Entry point for the script\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   },
   {
