--- a/recommendationAi.ipynb
+++ b/recommendationAi.ipynb
@@ -20,8 +20,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 115\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[38;5;66;03m# Entry point for the script\u001b[39;00m\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 115\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[1], line 82\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     79\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m     80\u001b[0m     \u001b[38;5;66;03m# Load dataset\u001b[39;00m\n\u001b[0;32m     81\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading dataset...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 82\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./data/mauritiusDataset.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Update path if needed\u001b[39;00m\n\u001b[0;32m     83\u001b[0m     data \u001b[38;5;241m=\u001b[39m preprocess_data(data)\n\u001b[0;32m     85\u001b[0m     \u001b[38;5;66;03m# Create TF-IDF matrix\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[3], line 125\u001b[0m\n\u001b[0;32m    123\u001b[0m \u001b[38;5;66;03m# Entry point for the script\u001b[39;00m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m--> 125\u001b[0m     \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[3], line 97\u001b[0m, in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     94\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmain\u001b[39m():\n\u001b[0;32m     95\u001b[0m     \u001b[38;5;66;03m# Load dataset\u001b[39;00m\n\u001b[0;32m     96\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLoading dataset...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 97\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m./data/mauritiusDataset.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Adjust path as needed\u001b[39;00m\n\u001b[0;32m     98\u001b[0m     data \u001b[38;5;241m=\u001b[39m preprocess_data(data)\n\u001b[0;32m    100\u001b[0m     \u001b[38;5;66;03m# Create TF-IDF matrix\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m   1014\u001b[0m     dialect,\n\u001b[0;32m   1015\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m   1023\u001b[0m )\n\u001b[0;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:620\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    617\u001b[0m _validate_names(kwds\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    619\u001b[0m \u001b[38;5;66;03m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 620\u001b[0m parser \u001b[38;5;241m=\u001b[39m \u001b[43mTextFileReader\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    622\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mor\u001b[39;00m iterator:\n\u001b[0;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n",
       "File \u001b[1;32mc:\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1620\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1617\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptions[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m kwds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhas_index_names\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m   1619\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhandles: IOHandles \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m-> 1620\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_engine\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mengine\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -34,86 +34,101 @@
    "source": [
     "import os\n",
     "import re\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Dropout, Input\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.layers import Input, Dense, Dropout, Concatenate\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
     "from tensorflow.keras.regularizers import l2\n",
+    "import pickle\n",
     "\n",
-    "# Data Preprocessing\n",
+    "# Preprocessing the dataset\n",
     "def preprocess_data(data):\n",
     "    features = [\n",
-    "        'category', 'tags', 'location', 'opening_hours',\n",
-    "        'family_friendly', 'cuisine_type', 'attraction_type', 'star_rating',\n",
-    "        'price_range', 'best_time_to_visit', 'peak_hours'\n",
+    "        'category', 'tags', 'location', 'cuisine_type', 'attraction_type', \n",
+    "        'family_friendly', 'star_rating', 'best_time_to_visit'\n",
     "    ]\n",
-    "    # Combine relevant features into a single string for TF-IDF\n",
     "    data['combined_features'] = data[features].fillna('').apply(\n",
     "        lambda x: ' '.join(x.map(str).str.lower().map(lambda s: re.sub(r'\\W+', ' ', s))),\n",
     "        axis=1\n",
     "    )\n",
     "    return data\n",
     "\n",
-    "# TF-IDF Matrix Creation\n",
+    "# Creating TF-IDF matrix for text features\n",
     "def create_tfidf_matrix(data):\n",
     "    vectorizer = TfidfVectorizer()\n",
     "    tfidf_matrix = vectorizer.fit_transform(data['combined_features'])\n",
     "    return tfidf_matrix, vectorizer\n",
     "\n",
-    "# ANN Data Preparation\n",
+    "# Preparing data for training (text and numerical)\n",
     "def prepare_ann_data(data, tfidf_matrix):\n",
-    "    # Create a dummy target column if it doesn't exist\n",
     "    if 'target_column' not in data.columns:\n",
     "        data['target_column'] = np.random.randint(0, 2, size=len(data))\n",
     "    y = data['target_column']\n",
-    "    X = tfidf_matrix.todense()\n",
-    "    return train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# ANN Model Building\n",
-    "def build_ann(input_dim):\n",
-    "    model = Sequential([\n",
-    "        Input(shape=(input_dim,)),  # Explicit Input layer\n",
-    "        Dense(128, activation='relu', kernel_regularizer=l2(0.01)),\n",
-    "        Dropout(0.2),\n",
-    "        Dense(64, activation='relu', kernel_regularizer=l2(0.01)),\n",
-    "        Dropout(0.2),\n",
-    "        Dense(1, activation='sigmoid')  # Output layer for binary classification\n",
-    "    ])\n",
+    "    # Select numerical features\n",
+    "    numerical_features = ['rating', 'reviews_count', 'popularity_score']\n",
+    "    numerical_data = data[numerical_features].fillna(0).to_numpy()\n",
+    "\n",
+    "    # Split data\n",
+    "    return train_test_split(tfidf_matrix.todense(), numerical_data, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Building the improved ANN model\n",
+    "def build_improved_ann(text_dim, numeric_dim):\n",
+    "    # Input for text features\n",
+    "    text_input = Input(shape=(text_dim,), name='text_input')\n",
+    "    text_layer = Dense(128, activation='relu', kernel_regularizer=l2(0.01))(text_input)\n",
+    "    text_layer = Dropout(0.2)(text_layer)\n",
+    "\n",
+    "    # Input for numerical features\n",
+    "    numeric_input = Input(shape=(numeric_dim,), name='numeric_input')\n",
+    "    numeric_layer = Dense(64, activation='relu', kernel_regularizer=l2(0.01))(numeric_input)\n",
+    "    numeric_layer = Dropout(0.2)(numeric_layer)\n",
+    "\n",
+    "    # Combine both layers\n",
+    "    merged = Concatenate()([text_layer, numeric_layer])\n",
+    "    merged_layer = Dense(64, activation='relu', kernel_regularizer=l2(0.01))(merged)\n",
+    "    merged_layer = Dropout(0.2)(merged_layer)\n",
+    "\n",
+    "    # Output layer\n",
+    "    output = Dense(1, activation='sigmoid')(merged_layer)\n",
+    "\n",
+    "    # Build model\n",
+    "    model = Model(inputs=[text_input, numeric_input], outputs=output)\n",
     "    model.compile(optimizer=Adam(learning_rate=0.001), loss='binary_crossentropy', metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "# Train the ANN Model\n",
-    "def train_ann(X_train, y_train):\n",
-    "    model = build_ann(X_train.shape[1])\n",
+    "# Training the ANN model\n",
+    "def train_ann(X_train_text, X_train_num, y_train):\n",
+    "    model = build_improved_ann(X_train_text.shape[1], X_train_num.shape[1])\n",
     "\n",
-    "    # Callbacks for early stopping and learning rate reduction\n",
+    "    # Callbacks\n",
     "    early_stopping = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
     "    reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, min_lr=1e-6)\n",
     "\n",
     "    # Train the model\n",
     "    model.fit(\n",
-    "        X_train, y_train,\n",
+    "        [X_train_text, X_train_num], y_train,\n",
     "        epochs=50, batch_size=32, validation_split=0.2,\n",
     "        callbacks=[early_stopping, reduce_lr]\n",
     "    )\n",
     "    return model\n",
     "\n",
-    "# Evaluate the ANN Model\n",
-    "def evaluate_model(model, X_test, y_test):\n",
-    "    y_pred = (model.predict(X_test) > 0.5).astype(int)\n",
+    "# Evaluating the ANN model\n",
+    "def evaluate_model(model, X_test_text, X_test_num, y_test):\n",
+    "    y_pred = (model.predict([X_test_text, X_test_num]) > 0.5).astype(int)\n",
     "    print(\"Model Evaluation:\")\n",
     "    print(classification_report(y_test, y_pred, zero_division=0))\n",
     "\n",
-    "# Main function to train and save the model\n",
+    "# Main function\n",
     "def main():\n",
     "    # Load dataset\n",
     "    print(\"Loading dataset...\")\n",
-    "    data = pd.read_csv('mauritiusDataset.csv')  # Update path if needed\n",
+    "    data = pd.read_csv('mauritiusDataset.csv')  # Adjust path as needed\n",
     "    data = preprocess_data(data)\n",
     "\n",
     "    # Create TF-IDF matrix\n",
@@ -122,31 +137,26 @@
     "\n",
     "    # Prepare data for training\n",
     "    print(\"Preparing data for ANN training...\")\n",
-    "    X_train, X_test, y_train, y_test = prepare_ann_data(data, tfidf_matrix)\n",
+    "    X_train_text, X_test_text, X_train_num, X_test_num, y_train, y_test = prepare_ann_data(data, tfidf_matrix)\n",
     "\n",
     "    # Train ANN\n",
     "    print(\"Training ANN model...\")\n",
-    "    model = train_ann(X_train, y_train)\n",
+    "    model = train_ann(X_train_text, X_train_num, y_train)\n",
     "\n",
     "    # Evaluate ANN\n",
     "    print(\"Evaluating model...\")\n",
-    "    evaluate_model(model, X_test, y_test)\n",
+    "    evaluate_model(model, X_test_text, X_test_num, y_test)\n",
     "\n",
-    "    # Save the model\n",
-    "    print(\"Saving ANN model...\")\n",
-    "    model.save('ann_model.keras')\n",
-    "    print(\"Model saved as 'ann_model.keras'\")\n",
-    "\n",
-    "    # Save the TF-IDF vectorizer for later use\n",
-    "    print(\"Saving TF-IDF vectorizer...\")\n",
+    "    # Save model and vectorizer\n",
+    "    print(\"Saving model and vectorizer...\")\n",
+    "    model.save('ann_model_improved.keras')\n",
     "    with open('vectorizer.pkl', 'wb') as f:\n",
-    "        import pickle\n",
     "        pickle.dump(vectorizer, f)\n",
-    "    print(\"TF-IDF vectorizer saved as 'vectorizer.pkl'\")\n",
+    "    print(\"Model and vectorizer saved.\")\n",
     "\n",
     "# Entry point for the script\n",
     "if __name__ == \"__main__\":\n",
-    "    main()"
+    "    main()\n"
    ]
   },
   {
